@@ -1209,6 +1209,8 @@ Extension Modules
 Tests
 -----
 
+- Issue #6484: Add unit tests for mailcap module (patch by Gregory Nofi)
+
 - Issue #11651: Improve the Makefile test targets to run more of the test suite
   more quickly. The --multiprocess option is now enabled by default, reducing
   the amount of time needed to run the tests. "make test" and "make quicktest"
